fix timesig wizard
Former-commit-id: 0e5beae309390697424cadad5184f6fd6ca18dd3

--- a/mscore/timesigwizard.ui
+++ b/mscore/timesigwizard.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>613</width>
-    <height>322</height>
+    <width>426</width>
+    <height>311</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -74,39 +74,47 @@
          </widget>
         </item>
         <item>
-       <widget class="QComboBox" name="TimesigN">
-        <item>
-         <property name="text">
-          <string>1</string>
-         </property>
+         <widget class="QComboBox" name="timesigN">
+          <property name="currentIndex">
+           <number>2</number>
+          </property>
+          <item>
+           <property name="text">
+            <string>1</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>2</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>4</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>8</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>16</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>32</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>64</string>
+           </property>
+          </item>
+         </widget>
         </item>
-        <item>
-         <property name="text">
-          <string>2</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>4</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>8</string>
-         </property>
-        </item>
-	<item>
-         <property name="text">
-          <string>16</string>
-         </property>
-        </item>
-	<item>
-         <property name="text">
-          <string>32</string>
-         </property>
-        </item>
-       </widget>
-      </item>
         <item>
          <spacer name="horizontalSpacer">
           <property name="orientation">
@@ -192,6 +200,9 @@
       </item>
       <item>
        <widget class="QComboBox" name="pickupTimesigN">
+        <property name="currentIndex">
+         <number>2</number>
+        </property>
         <item>
          <property name="text">
           <string>1</string>
@@ -212,14 +223,19 @@
           <string>8</string>
          </property>
         </item>
-	<item>
+        <item>
          <property name="text">
           <string>16</string>
          </property>
         </item>
-	<item>
+        <item>
          <property name="text">
           <string>32</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>64</string>
          </property>
         </item>
        </widget>
@@ -318,13 +334,6 @@ p, li { white-space: pre-wrap; }
    </item>
   </layout>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>Awl::DenominatorSpinBox</class>
-   <extends>QSpinBox</extends>
-   <header>awl/denomspinbox.h</header>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
