inspector update for KeySig
Former-commit-id: fc19b8b68eddca388f8cf9f1a8217c9d5aa4cdb2

--- a/mscore/clef.ui
+++ b/mscore/clef.ui
@@ -182,9 +182,9 @@
          </widget>
         </item>
         <item>
-         <widget class="QCheckBox" name="showCourtesyClef">
+         <widget class="QCheckBox" name="showCourtesy">
           <property name="text">
-           <string>showCourtesyClef</string>
+           <string>showCourtesy</string>
           </property>
          </widget>
         </item>
