fix #17588: Place border around colour boxes
Former-commit-id: a625599502cd1042817c2e7b161b5d7625d563bf

--- a/mscore/element.ui
+++ b/mscore/element.ui
@@ -240,6 +240,9 @@
           <property name="toolTip">
            <string notr="true"/>
           </property>
+          <property name="frameShape">
+            <set>QFrame::Box</set>
+          </property>
          </widget>
         </item>
         <item row="0" column="5">
