--- a/mscore/lineproperties.ui
+++ b/mscore/lineproperties.ui
@@ -112,6 +112,9 @@
           <height>0</height>
          </size>
         </property>
+        <property name="frameShape">
+          <set>QFrame::Box</set>
+        </property>
        </widget>
       </item>
       <item>
