--- a/mscore/inspector_element.ui
+++ b/mscore/inspector_element.ui
@@ -139,7 +139,11 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="Awl::ColorLabel" name="color"/>
+      <widget class="Awl::ColorLabel" name="color">
+       <property name="frameShape">
+        <set>QFrame::Box</set>
+       </property>
+      </widget>
      </item>
      <item row="1" column="0" colspan="2">
       <widget class="QCheckBox" name="visible">
