--- a/mscore/inspector_group_element.ui
+++ b/mscore/inspector_group_element.ui
@@ -53,7 +53,11 @@
       </widget>
      </item>
      <item row="0" column="0">
-      <widget class="Awl::ColorLabel" name="color"/>
+      <widget class="Awl::ColorLabel" name="color">
+       <property name="frameShape">
+        <set>QFrame::Box</set>
+       </property>      
+      </widget>
      </item>
      <item row="1" column="0">
       <widget class="QPushButton" name="setVisible">
