layout changes for handling of system header
Former-commit-id: 32d697f85d1b083d8b5a825e4d81d398b4010c8c

--- a/mscore/editstyle.ui
+++ b/mscore/editstyle.ui
@@ -2006,7 +2006,7 @@ p, li { white-space: pre-wrap; }
                </sizepolicy>
               </property>
               <property name="text">
-               <string>Clef-key distance</string>
+               <string>Clef/Key right margin</string>
               </property>
               <property name="alignment">
                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
