use text exclusively in album dialog
Former-commit-id: 04566b3b8a08408aba90d369808c8b00244dc0fd

--- a/mscore/album.ui
+++ b/mscore/album.ui
@@ -114,6 +114,7 @@
         <string>load an existing album</string>
        </property>
        <property name="text">
+         <string>Load</string>
         <string/>
        </property>
       </widget>
