--- a/share/templates/instr_language.xml
+++ b/share/templates/instr_language.xml
@@ -15,9 +15,9 @@
       </Instrument>
 
     <Instrument id="b-flute">
-      <longName>Eb Flute</longName>
-      <shortName>Eb Fl.</shortName>
-      <description>Eb Flute</description>
+      <longName>E♭ Flute</longName>
+      <shortName>E♭ Fl.</shortName>
+      <description>E♭ Flute</description>
       </Instrument>
 
     <Instrument id="flute">
@@ -237,9 +237,9 @@
       </Instrument>
 
     <Instrument id="bb-soprano-ocarina">
-      <longName>Bb Soprano Ocarina</longName>
-      <shortName>Bb S. Oc.</shortName>
-      <description>Bb Soprano Ocarina</description>
+      <longName>B♭ Soprano Ocarina</longName>
+      <shortName>B♭ S. Oc.</shortName>
+      <description>B♭ Soprano Ocarina</description>
       </Instrument>
 
     <Instrument id="g-alto-ocarina">
@@ -261,9 +261,9 @@
       </Instrument>
 
     <Instrument id="bb-alto-ocarina">
-      <longName>Bb Alto Ocarina</longName>
-      <shortName>Bb A. Oc.</shortName>
-      <description>Bb Alto Ocarina</description>
+      <longName>B♭ Alto Ocarina</longName>
+      <shortName>B♭ A. Oc.</shortName>
+      <description>B♭ Alto Ocarina</description>
       </Instrument>
 
     <Instrument id="c-bass-ocarina">
@@ -507,9 +507,9 @@
       </Instrument>
 
     <Instrument id="bb-duduk">
-      <longName>Bb Duduk</longName>
-      <shortName>Bb Du.</shortName>
-      <description>Bb Duduk</description>
+      <longName>B♭ Duduk</longName>
+      <shortName>B♭ Du.</shortName>
+      <description>B♭ Duduk</description>
       </Instrument>
 
     <Instrument id="a-duduk">
@@ -549,9 +549,9 @@
       </Instrument>
 
     <Instrument id="eb-clarinet">
-      <longName>Eb Clarinet</longName>
-      <shortName>Eb Cl.</shortName>
-      <description>Eb Clarinet</description>
+      <longName>E♭ Clarinet</longName>
+      <shortName>E♭ Cl.</shortName>
+      <description>E♭ Clarinet</description>
       </Instrument>
 
     <Instrument id="d-clarinet">
@@ -567,9 +567,9 @@
       </Instrument>
 
     <Instrument id="bb-clarinet">
-      <longName>Bb Clarinet</longName>
-      <shortName>Bb Cl.</shortName>
-      <description>Bb Clarinet</description>
+      <longName>B♭ Clarinet</longName>
+      <shortName>B♭ Cl.</shortName>
+      <description>B♭ Clarinet</description>
       </Instrument>
 
     <Instrument id="a-clarinet">
@@ -793,9 +793,9 @@
       </Instrument>
 
     <Instrument id="high-bb-horn">
-      <longName>High Bb Horn</longName>
-      <shortName>H. Bb Hn.</shortName>
-      <description>High Bb Horn</description>
+      <longName>High B♭ Horn</longName>
+      <shortName>H. B♭ Hn.</shortName>
+      <description>High B♭ Horn</description>
       </Instrument>
 
     <Instrument id="a-horn">
@@ -823,9 +823,9 @@
       </Instrument>
 
     <Instrument id="eb-horn">
-      <longName>Eb Horn</longName>
-      <shortName>Eb Hn.</shortName>
-      <description>Eb Horn</description>
+      <longName>E♭ Horn</longName>
+      <shortName>E♭ Hn.</shortName>
+      <description>E♭ Horn</description>
       </Instrument>
 
     <Instrument id="d-horn">
@@ -841,15 +841,15 @@
       </Instrument>
 
     <Instrument id="low-bb-horn">
-      <longName>Low Bb Horn</longName>
-      <shortName>L. Bb Hn.</shortName>
-      <description>Low Bb Horn</description>
+      <longName>Low B♭ Horn</longName>
+      <shortName>L. B♭ Hn.</shortName>
+      <description>Low B♭ Horn</description>
       </Instrument>
 
     <Instrument id="bb-piccolo-trumpet">
-      <longName>Bb Piccolo Trumpet</longName>
-      <shortName>Bb P. Tpt.</shortName>
-      <description>Bb Piccolo Trumpet</description>
+      <longName>B♭ Piccolo Trumpet</longName>
+      <shortName>B♭ P. Tpt.</shortName>
+      <description>B♭ Piccolo Trumpet</description>
       </Instrument>
 
     <Instrument id="a-piccolo-trumpet">
@@ -859,9 +859,9 @@
       </Instrument>
 
     <Instrument id="eb-trumpet">
-      <longName>Eb Trumpet</longName>
-      <shortName>Eb Tpt.</shortName>
-      <description>Eb Trumpet</description>
+      <longName>E♭ Trumpet</longName>
+      <shortName>E♭ Tpt.</shortName>
+      <description>E♭ Trumpet</description>
       </Instrument>
 
     <Instrument id="d-trumpet">
@@ -877,21 +877,21 @@
       </Instrument>
 
     <Instrument id="bb-trumpet">
-      <longName>Bb Trumpet</longName>
-      <shortName>Bb Tpt.</shortName>
-      <description>Bb Trumpet</description>
+      <longName>B♭ Trumpet</longName>
+      <shortName>B♭ Tpt.</shortName>
+      <description>B♭ Trumpet</description>
       </Instrument>
 
     <Instrument id="eb-bass-trumpet">
-      <longName>Eb Bass Trumpet</longName>
-      <shortName>Eb B. Tpt.</shortName>
-      <description>Eb Bass Trumpet</description>
+      <longName>E♭ Bass Trumpet</longName>
+      <shortName>E♭ B. Tpt.</shortName>
+      <description>E♭ Bass Trumpet</description>
       </Instrument>
 
     <Instrument id="bb-bass-trumpet">
-      <longName>Bb Bass Trumpet</longName>
-      <shortName>Bb B. Tpt.</shortName>
-      <description>Bb Bass Trumpet</description>
+      <longName>B♭ Bass Trumpet</longName>
+      <shortName>B♭ B. Tpt.</shortName>
+      <description>B♭ Bass Trumpet</description>
       </Instrument>
 
     <Instrument id="f-baroque-trumpet">
@@ -901,9 +901,9 @@
       </Instrument>
 
     <Instrument id="eb-baroque-trumpet">
-      <longName>Eb Baroque Trumpet</longName>
-      <shortName>Eb Bq. Tpt.</shortName>
-      <description>Eb Baroque Trumpet</description>
+      <longName>E♭ Baroque Trumpet</longName>
+      <shortName>E♭ Bq. Tpt.</shortName>
+      <description>E♭ Baroque Trumpet</description>
       </Instrument>
 
     <Instrument id="d-baroque-trumpet">
@@ -919,21 +919,21 @@
       </Instrument>
 
     <Instrument id="bb-baroque-trumpet">
-      <longName>Bb Baroque Trumpet</longName>
-      <shortName>Bb Bq. Tpt.</shortName>
-      <description>Bb Baroque Trumpet</description>
+      <longName>B♭ Baroque Trumpet</longName>
+      <shortName>B♭ Bq. Tpt.</shortName>
+      <description>B♭ Baroque Trumpet</description>
       </Instrument>
 
     <Instrument id="eb-cornet">
-      <longName>Eb Cornet</longName>
-      <shortName>Eb Cnt.</shortName>
-      <description>Eb Cornet</description>
+      <longName>E♭ Cornet</longName>
+      <shortName>E♭ Cnt.</shortName>
+      <description>E♭ Cornet</description>
       </Instrument>
 
     <Instrument id="bb-cornet">
-      <longName>Bb Cornet</longName>
-      <shortName>Bb Cnt.</shortName>
-      <description>Bb Cornet</description>
+      <longName>B♭ Cornet</longName>
+      <shortName>B♭ Cnt.</shortName>
+      <description>B♭ Cornet</description>
       </Instrument>
 
     <Instrument id="flugelhorn">
@@ -973,9 +973,9 @@
       </Instrument>
 
     <Instrument id="eb-alto-ophicleide">
-      <longName>Eb Alto Ophicleide</longName>
-      <shortName>Eb A. Oph.</shortName>
-      <description>Eb Alto Ophicleide</description>
+      <longName>E♭ Alto Ophicleide</longName>
+      <shortName>E♭ A. Oph.</shortName>
+      <description>E♭ Alto Ophicleide</description>
       </Instrument>
 
     <Instrument id="c-bass-ophicleide">
@@ -985,15 +985,15 @@
       </Instrument>
 
     <Instrument id="bb-bass-ophicleide">
-      <longName>Bb Bass Ophicleide</longName>
-      <shortName>Bb B. Oph.</shortName>
-      <description>Bb Bass Ophicleide</description>
+      <longName>B♭ Bass Ophicleide</longName>
+      <shortName>B♭ B. Oph.</shortName>
+      <description>B♭ Bass Ophicleide</description>
       </Instrument>
 
     <Instrument id="eb-contrabass-ophicleide">
-      <longName>Eb Contrabass Ophicleide</longName>
-      <shortName>Eb Cb. Oph.</shortName>
-      <description>Eb Contrabass Ophicleide</description>
+      <longName>E♭ Contrabass Ophicleide</longName>
+      <shortName>E♭ Cb. Oph.</shortName>
+      <description>E♭ Contrabass Ophicleide</description>
       </Instrument>
 
     <Instrument id="f-alto-horn">
@@ -1003,9 +1003,9 @@
       </Instrument>
 
     <Instrument id="eb-alto-horn">
-      <longName>Eb Alto Horn</longName>
-      <shortName>Eb A. Hn.</shortName>
-      <description>Eb Alto Horn</description>
+      <longName>E♭ Alto Horn</longName>
+      <shortName>E♭ A. Hn.</shortName>
+      <description>E♭ Alto Horn</description>
       </Instrument>
 
     <Instrument id="baritone-horn">
@@ -1021,9 +1021,9 @@
       </Instrument>
 
     <Instrument id="eb-mellophone">
-      <longName>Eb Mellophone</longName>
-      <shortName>Eb Mph.</shortName>
-      <description>Eb Mellophone</description>
+      <longName>E♭ Mellophone</longName>
+      <shortName>E♭ Mph.</shortName>
+      <description>E♭ Mellophone</description>
       </Instrument>
 
     <Instrument id="f-mellophonium">
@@ -1033,15 +1033,15 @@
       </Instrument>
 
     <Instrument id="eb-mellophonium">
-      <longName>Eb Mellophonium</longName>
-      <shortName>Eb Mpm.</shortName>
-      <description>Eb Mellophonium</description>
+      <longName>E♭ Mellophonium</longName>
+      <shortName>E♭ Mpm.</shortName>
+      <description>E♭ Mellophonium</description>
       </Instrument>
 
     <Instrument id="bb-wagner-tuba">
-      <longName>Bb Wagner Tuba</longName>
-      <shortName>Bb Wag. Tu.</shortName>
-      <description>Bb Wagner Tuba</description>
+      <longName>B♭ Wagner Tuba</longName>
+      <shortName>B♭ Wag. Tu.</shortName>
+      <description>B♭ Wagner Tuba</description>
       </Instrument>
 
     <Instrument id="f-wagner-tuba">
@@ -1105,9 +1105,9 @@
       </Instrument>
 
     <Instrument id="bb-tuba">
-      <longName>Bb Tuba</longName>
-      <shortName>Bb Tu.</shortName>
-      <description>Bb Tuba</description>
+      <longName>B♭ Tuba</longName>
+      <shortName>B♭ Tu.</shortName>
+      <description>B♭ Tuba</description>
       </Instrument>
 
     </InstrumentGroup>
