b-flute --> eb-flute in instruments.xml
Former-commit-id: 8538ec62d513f9eaded9124322fb6b178d387823

--- a/share/templates/instr_language.xml
+++ b/share/templates/instr_language.xml
@@ -14,7 +14,7 @@
       <description>Treble Flute</description>
       </Instrument>
 
-    <Instrument id="b-flute">
+    <Instrument id="eb-flute">
       <longName>E♭ Flute</longName>
       <shortName>E♭ Fl.</shortName>
       <description>E♭ Flute</description>
