--- a/share/templates/instruments.xml
+++ b/share/templates/instruments.xml
@@ -48,7 +48,7 @@
         </Channel>
       </Instrument>
 
-    <Instrument id="b-flute">
+    <Instrument id="eb-flute">
       <longName>E♭ Flute</longName>
       <shortName>E♭ Fl.</shortName>
       <description>E♭ Flute</description>
