--- a/share/templates/instruments_de.xml
+++ b/share/templates/instruments_de.xml
@@ -14,7 +14,7 @@
       <description>Treble Flute</description>
       </Instrument>
 
-    <Instrument id="b-flute">
+    <Instrument id="eb-flute">
       <longName>Es Flöte</longName>
       <shortName>Es Fl.</shortName>
       <description>Es Flöte</description>
