Added configuration for tablature fonts. Merged all tab fonts into one.
Tablature symbols and styles are no longer hard coded but stored in a config. file; this allowed to merge all tab fonts into one.


Former-commit-id: 6fac784231d38db33d8f889c7e5159b55234ea3d

--- a/mscore/musescore-apple.qrc
+++ b/mscore/musescore-apple.qrc
@@ -20,6 +20,7 @@
       <file alias="fonts/mscore20.xml">../fonts/mscore20.xml</file>
       <file alias="fonts/gonville.xml">../fonts/gonville.xml</file>
       <file alias="fonts/fonts_figuredbass.xml">../fonts/fonts_figuredbass.xml</file>
+      <file alias="fonts/fonts_tabulature.xml">../fonts/fonts_tabulature.xml</file>
 
       <file alias="data/instruments.xml">../share/templates/instruments.xml</file>
       <file>data/splash.jpg</file>
